tests/neg/i12986b.scala
class Bar(i: Int):
  transparent inline def this() = this(0) // error

val bar = Bar()
